Rename some confusing methods